# llm-knowledge-collapse-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: metrics.yaml  model.yaml  training.yaml
docs/: CHECKLIST.md  COMPARATIVE_ANALYSIS.md  DECISIONS.md  FUTURE_WORK.md  GRILL_SESSION.md  GRILL_SESSION_2.md  IMPROVEMENTS_PLAN.md  METRICS.md  NEGATIVE_RESULTS.md  NEW_EXPERIMENTS_RESULTS.md  PAPER_OUTLINE.md  PAPER_STRUCTURE.md  PHASE2_PLAN.md  PROJECT_STATUS.md  PROJECT_STATUS_v2.md  PROTOCOL.md  REFERENCES_SEARCH.md  RESULTS_FINAL.md  SCENARIOS.md  SESSION_STATE.md  TEMPLATE_RULES.md  THEORY.md
outputs/: v3_analysis.txt
paper/: .gitignore  cas-dc-template.abs  cas-dc-template.aux  cas-dc-template.bbl  cas-dc-template.blg  cas-dc-template.fdb_latexmk  cas-dc-template.fls  cas-dc-template.tex  cas-refs.bib
scripts/: analyze_complete_metrics.py  analyze_error_fixation.py  analyze_normalization.py  analyze_refined.py  analyze_synthetic_diversity.py  analyze_v3.py  audit_lora_norm.py  c5_replicate_masks.py  capture_fig1.py  capture_html_figures.py  causal_intervention.py  check_c3_vs_c5.py  check_citations.py  check_fig_sizes.py  check_intervention_confounds.py  check_refs.py  crosslag_robustness.py  exp_gemma3_extra_seeds.py  exp_gemma3_fft.py  exp_gemma3_intermediate_ranks.py  exp_rank_lr_matrix.py  extract_annotations_v2.py  extract_per_matrix_rank.py  fact_overlap_analysis.py  fft_drift_gen10.py  fft_drift_replicate.py  fft_lr_sweep.py  fft_vs_qlora.py  fig1_overview.html  fig7_methodology.html  fig7_pipeline.html  fig8_clean.html  fig8_d3.html  (+58 more)
(+200 files in other folders)
