[project]
name = "llm-knowledge-collapse"
version = "0.1.0"
description = "Early Detection of Knowledge Collapse Through Explanation Stability Analysis in Recursive LLM Training"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.1",
    "transformers==4.46.3",
    "peft==0.13.2",
    "bitsandbytes==0.44.1",
    "accelerate==1.1.1",
    "datasets==3.1.0",
    "scipy==1.14.1",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "tqdm==4.67.1",
]

[tool.uv]
dev-dependencies = []
