[project]
name = "llm-knowledge-collapse"
version = "0.1.0"
description = "Early Detection of Knowledge Collapse Through Explanation Stability Analysis in Recursive LLM Training"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5",
    "transformers>=4.50",
    "peft>=0.15",
    "bitsandbytes>=0.44.1",
    "accelerate>=1.6",
    "datasets==3.1.0",
    "scipy==1.14.1",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "tqdm==4.67.1",
    "matplotlib>=3.10.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
